# disposable-email-domains

./: Cargo.toml  LICENSE  README.md
example/: quick_start.rs
src/: lib.rs
